# jy_app

./: .config  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kconfig  burn_plan.ini
apps/: stt_view_common.c  stt_view_common.h
apps/ai/: ai.c  ai.h  ai_msg.c  ai_view.c
apps/gallery/: gallery.c  gallery.h  gallery_msg.c
apps/guide/: guide.c  guide.h
apps/home/: home.c  home.h  home_msg.c  home_view.c
apps/langselection/: langselection.c  langselection.h
apps/music/: music.c  music.h  music_msg.c  music_view.c
apps/navigation/: navigation.c  navigation.h  navigation_msg.c  navigation_view.c
apps/ota/: ota.c  ota.h  ota_msg.c
apps/poweroff/: poweroff.c  poweroff.h
apps/poweron/: poweron.c  poweron.h
apps/prompter/: prompter.c  prompter.h  prompter_entry_overlay.ui.json  prompter_file_roller.ui.json  prompter_msg.c  prompter_page_text_preview.ui.json  prompter_view.c
apps/reader/: reader.c  reader.h  reader_msg.c  reader_view.c
apps/transcribe/: transcribe.c  transcribe.h  transcribe_msg.c  transcribe_view.c
apps/translate/: translate.c  translate.h  translate_msg.c  translate_view.c
bes28/: SymbolTable.def  floatair_fs.c  floatair_lcd.c  main.c  rpmsgttf_client.c  rpmsgttf_client.h  sys_adapter.c  sys_adapter.h
cmake/: CommonSources.cmake  OsSdk.cmake  PlatformArm.cmake  PlatformLinux.cmake  PlatformMacos.cmake  PlatformMingw.cmake  PlatformMsvc.cmake  ProductOverlay.cmake  SimulatorCommon.cmake  TargetConfig.cmake  TargetPlatform.cmake
common/: app_def.h  app_lcd.h  elf_common.h  floatair_fs.h  floatair_run.c  message.c  message.h
common/app_framework/: README.md  app_layers.c  app_layers.h  app_manager.c  (+9 more)
docs/: FloatairBoard.md  FloatairBoard_cn.md  FloatairSimulator.md  FloatairSimulator_cn.md  datapath_v3_protocol.md  datapath_v3_protocol_cn.md  readme.md  readme_cn.md
lvgl/: Kconfig
scripts/: StringPool.py  SymbolTableGen.sh  develop.bat  develop.sh  fs_img.py  jy_elf_analyzer.py  jy_elf_strip.sh  os_sdk_extract.py  package.bat  package.sh  platformGen.sh  product_sync.py
system/: stt_common.c  stt_common.h  system.c  system.h  system_bt_disconnect_overlay.ui.json  system_cfg.c  system_config_json.c  system_config_json.h  system_def.h  system_msg_devinfo.c  system_msg_dispatch.c  system_msg_file.c  system_msg_report_to_app.c  system_msg_request.c  system_msg_sysconfig.c  system_msg_syscontrol.c  system_msg_sysind.c  system_msg_sysstatus.c  system_notification.c  system_notification.h  system_res.c  system_res.h  system_runtime_input.c  system_runtime_input.h  system_runtime_misc.c  system_runtime_state.c  system_runtime_state.h  system_runtime_types.h  system_runtime_ui.c  system_runtime_ui.h  system_timer.c  system_timer.h
(+114 files in other folders)
